k8s/apps/ws-gateway/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-gateway-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: ws-gateway
          image: vincentramaputra/viscord-ws-gateway:sha-5d924f4
